crates/deadline-cli/tests/cli/snapshots/cli__queue_sync_output__sync_output_checkpoint_dir_not_writable_returns_error.snap
---
source: crates/deadline-cli/tests/cli/queue_sync_output.rs
info:
  program: deadline
  args:
    - queue
    - sync-output
    - "--checkpoint-dir"
    - /nonexistent/readonly/dir
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:57005"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:57005"
    AWS_ENDPOINT_URL_S3: "http://localhost:57005"
    AWS_ENDPOINT_URL_STS: "http://localhost:57005"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpFgPKir/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpFgPKir
---
success: false
exit_code: 1
----- stdout -----
Failed to create checkpoint directory /nonexistent/readonly/dir: Read-only file system (os error 30)

----- stderr -----
