crates/deadline-cli/tests/cli/snapshots/cli__queue_sync_output__sync_output_checkpoint_storage_profile_mismatch_returns_error.snap
---
source: crates/deadline-cli/tests/cli/queue_sync_output.rs
info:
  program: deadline
  args:
    - queue
    - sync-output
    - "--checkpoint-dir"
    - /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpVknTGO
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:56998"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:56998"
    AWS_ENDPOINT_URL_S3: "http://localhost:56998"
    AWS_ENDPOINT_URL_STS: "http://localhost:56998"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpNPZKGF/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpNPZKGF
---
success: false
exit_code: 1
----- stdout -----
The checkpoint was created with local storage profile sp-OTHER-999, but the configured storage profile is sp-linux-123

----- stderr -----
Started incremental download for queue: Test Queue
Checkpoint: [PATH]

Checkpoint found
