crates/deadline-cli/tests/cli/snapshots/cli__queue_sync_output__sync_output_dry_run_does_not_save_checkpoint.snap
---
source: crates/deadline-cli/tests/cli/queue_sync_output.rs
info:
  program: deadline
  args:
    - queue
    - sync-output
    - "--dry-run"
    - "--ignore-storage-profiles"
    - "--checkpoint-dir"
    - /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmparU4sv
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:59896"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:59896"
    AWS_ENDPOINT_URL_S3: "http://localhost:59896"
    AWS_ENDPOINT_URL_STS: "http://localhost:59896"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpvBkRn3/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpvBkRn3
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
Ignoring all storage profiles.
Started incremental download for queue: Test Queue
Checkpoint: [PATH]

Checkpoint not found, lookback is 0 minutes
Initializing from: [TIMESTAMP]

Updating download state across time interval:
    From: [TIMESTAMP]
      To: [TIMESTAMP]
  Length: [DURATION]

Retrieving updated data from Deadline Cloud...
...retrieval completed

Categorizing 0 checkpoint jobs against 1 download candidate jobs...
NEW Job: Dry Run Job (job-dry)
  Succeeded tasks: 1 / 2
  Manifest file system paths:
    - /mnt/shared (posix)
...categorization completed

Retrieving sessions for 1 jobs...
Summary of paths to download:
  (no files to download)

Skipping downloads due to DRY RUN

Summary of DRY RUN for incremental output download (no files were downloaded to the file system):
  Downloaded session actions: 0
  Downloaded files: 0
  Downloaded bytes: 0 B
  Jobs with downloads:
    completed: 0
    added: 1
    updated: 0
  Jobs without downloads:
    not using job attachments: 0
    missing storage profile: 0
    unchanged: 0
    inactive: 0
This is a DRY RUN so the checkpoint was not saved
